Bugfix: Reduced img size on smaller devices so that the slide animation from the right doesn't cause iPhone 5 to zoom out during animation.

--- a/components/Options/styles.css
+++ b/components/Options/styles.css
@@ -17,11 +17,11 @@
 }
 
 .sectionIcon {
-  width: 120px;
+  width: 100px;
 }
 
 .appBodyImg {
-  width: 150px;
+  width: 100px;
   margin: 0 auto;
 }
 
